fix: overflow issues with hidden fixed content

--- a/src/assets/_global.scss
+++ b/src/assets/_global.scss
@@ -107,6 +107,7 @@ section {
   padding: 2em;
   transition: opacity 0.2s;
   opacity: 0;
+  overflow-x: hidden;
 
   @media screen and (max-width: $sm-screen) {
     padding: 2em 0em;
